--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,8 +14,8 @@ jobs:
 
       - name: Install native dependencies
         run: |
-          apt-get update -y
-          apt-get install -y libopenblas-dev
+          sudo apt-get update -y
+          sudo apt-get install -y libopenblas-dev
 
       - name: Setup OCaml
         uses: ocaml/setup-ocaml@v3
